--- a/UI/index.html
+++ b/UI/index.html
@@ -7,8 +7,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src="./data.js"></script>
     <link rel="stylesheet" href="style.css" /> 
-    <link rel="stylesheet" href="techssonformat.css" /> 
+    <link rel="stylesheet" href="customformat.css" /> 
 </head>
 <body>
     <div id="app">
